# bencheval

./: .gitignore  MANIFEST.in  README.md  banner.ipynb  cardinal.ipynb  data.html  genindex.html  index.html  measures.html  objects.inv  ordinal.ipynb  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  utils.html
_modules/: index.html
_modules/bencheval/: data.html
_modules/bencheval/measures/: cardinal.html  ordinal.html
_modules/bencheval/utils/: base.html  metric.html  win_rate.html
_sources/: data.rst.txt  index.rst.txt  measures.rst.txt  utils.rst.txt
bencheval/data/: __init__.py
bencheval/data/bbh/: __init__.py  statistic.py
bencheval/data/bigcode/: __init__.py
bencheval/data/dummy/: __init__.py
bencheval/data/glue/: __init__.py
bencheval/data/heim/: __init__.py
bencheval/data/helm/: __init__.py
bencheval/data/imagenet/: __init__.py  format.py  run_imagenet.py
bencheval/data/mmlu/: __init__.py  format.py
bencheval/data/mteb/: __init__.py
bencheval/data/openllm/: __init__.py
bencheval/data/superglue/: __init__.py
bencheval/data/vtab/: __init__.py
bencheval/measures/: cardinal.py  ordinal.py
bencheval/utils/: base.py  metric.py  win_rate.py
docs/: conf.py  index.rst
examples/: banner.ipynb  cardinal.ipynb  ordinal.ipynb
