[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bencheval"
description = "Tools for measuring sensitivity and diversity of multi-task benchmarks."
version = "1.0"
dynamic = ["readme", "dependencies"]
requires-python = ">=3.7"

[tool.setuptools.packages.find]
include = ["bencheval"]

[tool.setuptools.dynamic]
readme = { file = "README.md" }
dependencies = { file = "requirements.txt" }
